fix pre-wrap to global

--- a/src/all.scss
+++ b/src/all.scss
@@ -197,4 +197,5 @@ body {
   margin-top: 52px;
   font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN",
     "Hiragino Sans", Meiryo, sans-serif;
+  white-space: pre-wrap;
 }
